--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
-.container {
+main {
    background-color: hsl(0, 0%, 100%);
    width: 270px;
    height: 450px;
